<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_x_gazebo_controller</name>
  <version>1.0.0</version>
  <description>
    Gazebo configurations package for OpenManipulator-X Gazebo Controller
  </description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_gazebo</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_simulations/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>open_manipulator_x_libs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
